[tool.poetry]
name = "andz"
version = "0.1.0"
description = "Algorithms and Data Structures"
authors = ["nbro <nbrosoftware@outlook.com>"]
license = "MIT"
repository = "https://github.com/nbro/andz"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pylint = "^3.1.0"
mypy = "^1.9.0"
coverage = "^7.4.3"
scipy = "^1.12.0"
pytest = "^8.1.1"

[tool.pytest.ini_options]
#log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%d-%m-%Y %H:%M:%S"

[tool.coverage]
run.omit = ["*tests*"]
report.show_missing = true
report.skip_covered = true
report.fail_under = 95  # TODO: change this to 100

[tool.pylint."REPORTS"]
output-format = "colorized"

[tool.pylint."MESSAGES CONTROL"]
disable = ["fixme", "invalid-name"]

[tool.isort]
atomic = true
profile = "black"

[tool.black]
target-version = ["py39"]

[tool.mypy]
python_version = 3.9
warn_return_any = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
